src/test/ui/macros/macro-comma-behavior.core.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:17:23
   |
LL |     assert_eq!(1, 1, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:20:23
   |
LL |     assert_ne!(1, 2, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:26:29
   |
LL |     debug_assert_eq!(1, 1, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:29:29
   |
LL |     debug_assert_ne!(1, 2, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:50:19
   |
LL |     format_args!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:68:21
   |
LL |     unimplemented!("{}",);
   |                     ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:77:24
   |
LL |             write!(f, "{}",)?;
   |                        ^^

error: aborting due to 7 previous errors

